YD-19:ADD: added global header

--- a/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
+++ b/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
@@ -72,10 +72,28 @@
 
             <div class="preview">
                 <span class="inner">
+                    <i class="icon icon-bars"></i>
+                </span>
+                <br>
+                <span class='label'>bars</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
                     <i class="icon icon-cart"></i>
                 </span>
                 <br>
                 <span class='label'>cart</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
+                    <i class="icon icon-close"></i>
+                </span>
+                <br>
+                <span class='label'>close</span>
             </div>
 
 
@@ -103,6 +121,15 @@
                 </span>
                 <br>
                 <span class='label'>gift-box</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
+                    <i class="icon icon-menu"></i>
+                </span>
+                <br>
+                <span class='label'>menu</span>
             </div>
 
 
