YD-22:ADD: added styles for main navigation

--- a/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
+++ b/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
@@ -90,6 +90,24 @@
 
             <div class="preview">
                 <span class="inner">
+                    <i class="icon icon-chevron-left"></i>
+                </span>
+                <br>
+                <span class='label'>chevron-left</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
+                    <i class="icon icon-chevron-right"></i>
+                </span>
+                <br>
+                <span class='label'>chevron-right</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
                     <i class="icon icon-close"></i>
                 </span>
                 <br>
