YD-89:ADD: updated PDP structure and styling

--- a/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
+++ b/cartridges/app_yd_core/cartridge/static/default/fonts/icons/icons.html
@@ -162,6 +162,15 @@
 
             <div class="preview">
                 <span class="inner">
+                    <i class="icon icon-size-chart"></i>
+                </span>
+                <br>
+                <span class='label'>size-chart</span>
+            </div>
+
+
+            <div class="preview">
+                <span class="inner">
                     <i class="icon icon-socials-facebook"></i>
                 </span>
                 <br>
